--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     .content {
       max-width: 500px;
       margin: auto;
-      background: white;
+      background: black;
       padding: 70px;
     }
     .input {
